--- a/App/Dockerfile
+++ b/App/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:current-slim
 
-LABEL MAINTAINER=nigelpoulton@hotmail.com
+LABEL MAINTAINER=san.tns@gmail.com
 
 # Copy source code to /src in container
 COPY . /src
