--- a/Deployments/node-app/node-app-v1.deployment.yml
+++ b/Deployments/node-app/node-app-v1.deployment.yml
@@ -14,6 +14,6 @@ spec:
         app: node-app
     spec:
       containers:
-      - image: node-app:1.0
+      - image: santhoshtns/node-app:1.0
         name: node-app
         resources: 
