--- a/Deployments/node-app/node-app-v2.deployment.yml
+++ b/Deployments/node-app/node-app-v2.deployment.yml
@@ -12,6 +12,6 @@ spec:
         app: node-app
     spec:
       containers:
-      - image: node-app:2.0
+      - image: santhoshtns/node-app:2.0
         name: node-app
         resources: 
