--- a/Deployments/node-app/node-app-v3.deployment.yml
+++ b/Deployments/node-app/node-app-v3.deployment.yml
@@ -13,6 +13,6 @@ spec:
         app: node-app
     spec:
       containers:
-      - image: node-app:3.0
+      - image: santhoshtns/node-app:3.0
         name: node-app
         resources: 
